      behavior should be unchanged if called in scalar or void context.  This
      result code seems to be required for full support of non-blocking I/O,
      since users need to handle SSL_ERR_WANT_READ, SSL_ERROR_WANT_WRITE, etc.
      Fixed a problem where t/local/kwalitee.t fails with
       Module::CPANTS::Analyse 0.86. Patch from Paul.
      Fixed a number of typos patched by Giles.
      Fixed a compiler warning from Compiling with gcc-4.4 and -Wall, patched by Giles.
     


1.48 2012-04-25
     Removed unneeded Debian_CPANTS.txt from MANIFEST.
     Fixed incorrect documentation about the best way to call CTX_set_options.
     Fixed problem that caused Undefined subroutine utf8::encode @
     t/local/33_x509_create_cert.t (on perl 5.6.2). Thanks to kmx.
     In examples and pod documentations, changed #!/usr/local/bin/perl to #!/usr/bin/perl.
     t/local/06_tcpecho.t now tries a number of ports to bind to until
     successful.

1.47 2012-04-04
     Fixed overlong lines in pod, patch from Salvatore Bonaccorso, Debian Perl
     Group
     Fixed spelling errors in pod, patch from Salvatore Bonaccorso, Debian Perl
     Group
     Fixed extra "garbage" files in 1.46 tarball. Patch from kmx.
     Fixed incorrect fail reports on some 64 bit platforms. Patch from paul.
     Fix to avoid FAIL reports from cpantesters with missing openssl
     Use my_snprintf from ppport.h to prevent link failures with perl 5.8 and
     earlier when compiled with MSVC.

1.46 2012-04-03
     Fixed a problem reported by Atoomic: 
      When bootstrapping Net::SSleay ( with DynaLoader ) if you override the SIG{DIE} signal, using 
      Net::SSLeay will result in an error.
      Recreated META.yml, added META.yml to dist
      Fixed typo: the word "corresponding" was mis-spelled as "coresponding"
       throughout the POD. Patched by kmx.
      Updated META.yml to include repository and bugtracker